Switch from Apache's HTTP lib to Android's.
May have better performance for rapid requests,
but really just switched because Android has a prettier API. :)